--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,17 +1,26 @@
-%h2 Sign up
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
+%h1 My Latest Web App
+.block#block-login
   = devise_error_messages!
-  %p
-    = f.label :login
-    %br/
-    = f.text_field :login
-  %p
-    = f.label :password
-    %br/
-    = f.password_field :password
-  %p
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation
-  %p= f.submit "Sign up"
-= render :partial => "devise/shared/links"
+  %h2 Sign in
+  .content.login
+    .flash
+      - flash.each do |type, message|
+        %div{ :class => "message #{type}" }
+          %p= message
+      
+    = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :class => "form login" }) do |f|
+      .group.wat-cf
+        .left= f.label :login, :class => "label right"
+        .right= f.text_field :login, :class => "text_field"
+      .group.wat-cf
+        .left= f.label :password, :class => "label right"
+        .right= f.password_field :password, :class => "text_field"
+      .group.wat-cf
+        .left= f.label :password_confirmation, :class => "label right"
+        .right= f.password_field :password_confirmation, :class => "text_field"
+      .group.wat-cf
+        .right
+          %button.button{ :type => "submit" }
+            = image_tag "web-app-theme/icons/key.png"
+            Sign Up
+    = render :partial => "devise/shared/links"
