--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,13 +13,15 @@
         #user-navigation
           %ul.wat-cf
             %li
-              %a{:href => "#"}= t("web-app-theme.profile", :default => "Profile")
-            %li
-              %a{:href => "#"}= t("web-app-theme.settings", :default => "Settings")
-            %li
               %a.logout{:href => "/logout"}= t("web-app-theme.logout", :default => "Logout")
         #main-navigation
           %ul.wat-cf
+            %li
+              = link_to "Home", root_path
+            %li
+              = link_to "Profile", profile_path
+            %li
+              = link_to "Invitations", "#"
       #wrapper.wat-cf
         .flash
           - flash.each do |type, message|
