nice field error messages using wep-app-theme label hack

--- a/public/stylesheets/web-app-theme/override.css
+++ b/public/stylesheets/web-app-theme/override.css
@@ -2,3 +2,8 @@
 #error_explanation ul {
   padding-left: 30px;
 }
+
+.flash .error, .flash .alert {
+  border: 1px solid #ffbbbb;
+  background-color: #ffdddd;
+}
