--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -9,6 +9,6 @@
       = t("web-app-theme.edit", :default => "Edit")
       Profile
     .inner
-      = form_for @profile, :url => profile_path, :html => { :class => :form } do |f|
+      = form_for @profile, :url => profile_path, :html => { :class => :form, :multipart => true } do |f|
         = render :partial => "form", :locals => {:f => f}
 - content_for :sidebar, render(:partial => 'sidebar')
