--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -40,7 +40,7 @@
         %b
           = t("activerecord.attributes.profile.avatar", :default => t("activerecord.labels.avatar", :default => "Avatar"))
           \:
-        = @profile.avatar_file_name
+        = image_tag @profile.avatar.url(:thumb)
       .wat-cf
         = link_to image_tag("web-app-theme/icons/application_edit.png", :alt => "#{t("web-app-theme.edit", :default=> "Edit")}") + " " + t("web-app-theme.edit", :default=> "Edit"), edit_profile_path, :class => "button"
         = link_to image_tag("web-app-theme/icons/cross.png", :alt => "#{t("web-app-theme.delete", :default=> "Delete")}") + " " + t("web-app-theme.delete", :default => "Delete"), profile_path, :method => "delete", :class => "button", :confirm => "#{t("web-app-theme.confirm", :default => "Are you sure?")}"
