--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -1,8 +1,7 @@
 .block
   .secondary-navigation
     %ul.wat-cf
-      %li.first= link_to "#{t("web-app-theme.list", :default => "List")}", profile_path
-      %li= link_to "#{t("web-app-theme.new", :default => "New")}", new_profile_path
+      %li.first= link_to "#{t("web-app-theme.show", :default => "Show")}", profile_path
       %li.active= link_to "#{t("web-app-theme.edit", :default => "Edit")}", edit_profile_path
   .content
     %h2.title
