--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,7 @@
             %li
               = link_to "Profile", profile_path
             %li
-              = link_to "Invitations", "#"
+              = link_to "Invitations", invitations_path
       #wrapper.wat-cf
         .flash
           - flash.each do |type, message|
