--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,9 +3,12 @@
   %head
     %title Invitator (SAGE test app)
     = stylesheet_link_tag "web-app-theme/base", "web-app-theme/themes/default/style", "web-app-theme/override", :cache => true
-    = javascript_include_tag :defaults, :cache => true
+    = stylesheet_link_tag 'overlay'
+    = javascript_include_tag 'jquery.min', 'jquery.tools.min', 'rails', 'application', :cache => true
     = csrf_meta_tag
   %body
+    #overlay
+      .contentWrap
     #container
       #header
         %h1
